# xacml-rs

./: .gitignore  Cargo.toml  Discounting_trust_policy.xml  Expression_discount_belief.xml  Expression_discount_uncertainty.xml  README.md  notes.md  sl_policy.xml  sl_request_attribute.xml  xpath_implementation_chatgpt.rtf
benches/: sl_benches.rs
helper/function-ids/: .gitignore  script.py  table.html  xacml_enum.rs
helper/plots/: benchmark_plot.eps  plot_benchmarks.py
helper/tests/: README.md
src/: create_files.rs  lib.rs  ls_policies.rs  main.rs  pap.rs  pdp.rs  sl_policies.rs  types.rs  utils.rs
src/sl_policies/: mod.rs  trust_discounting.rs
src/types/: mod.rs
src/xacml/: all_of_type.rs  any_of_type.rs  attribute_designator_type.rs  attribute_identifiers.rs  attribute_type.rs  attributes_type.rs  category_type.rs  combining_algorithms.rs  decision_type.rs  expression_type.rs  function_implementation.rs  match_type.rs  mod.rs  policy_result.rs  policy_type.rs  request_type.rs  rule_result.rs  rule_type.rs  status_code_type.rs  status_message_type.rs  target_type.rs  test_types.rs
src/xacml/enums/: algorithms.rs  attributes.rs  combining_algorithms.rs  data_types.rs  function.rs  mod.rs  status_codes.rs
src/xacml/structs/: all_of_type.rs  any_of_type.rs  apply_type.rs  attribute_designator_type.rs  attribute_type.rs  attribute_value_type.rs  attributes_type.rs  combining_algorithms.rs  condition_type.rs  decision_type.rs  expression_type.rs  function_implementation.rs  function_type.rs  implementation.rs  match_type.rs  mod.rs  policy_type.rs  (+9 more)
(+4 files in other folders)
