[package]
name = "xacml-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
quick-xml = {version = "0.37.2", features = ["serialize"]}
serde = { version = "1.0.215", features = ["derive"]}
derive_builder = "0.20.2"   #automatically derive builder
derive-getters = "0.5.0"    #automatically derive getters (implemented where necessary)